Manufactoring/force-app/main/default/objects/mfg_Production_Order__c/fields/mfg_Deadline__c.field-meta.xml
<CustomField>
    <fullName>mfg_Deadline__c</fullName>
    <label>Deadline</label>
    <type>Date</type>
</CustomField>