Manufactoring/force-app/main/default/objects/mfg_Production_Order__c/fields/mfg_Estimated_End__c.field-meta.xml
<CustomField>
    <fullName>mfg_Estimated_End__c</fullName>
    <label>Estimated End</label>
    <type>Date</type>
</CustomField>