Manufactoring/force-app/main/default/objects/mfg_Production_Order__c/fields/mfg_Priority__c.field-meta.xml
<CustomField>
    <fullName>mfg_Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>