Manufactoring/force-app/main/default/objects/mfg_Production_Order__c/fields/mfg_Quantity_Completed__c.field-meta.xml
<CustomField>
    <fullName>mfg_Quantity_Completed__c</fullName>
    <label>Quantity Completed</label>
    <summarizedField>mfg_Production_Batch__c.mfg_Units_Passed_QC__c</summarizedField>
    <summaryFilterItems>
        <field>mfg_Production_Batch__c.mfg_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>mfg_Production_Batch__c.mfg_Production_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>