Manufactoring/force-app/main/default/objects/mfg_Production_Order__c/fields/mfg_Quantity_Ordered__c.field-meta.xml
<CustomField>
    <fullName>mfg_Quantity_Ordered__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantity Ordered</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>