Manufactoring/force-app/main/default/objects/mfg_Production_Order__c/fields/mfg_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>mfg_Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse</label>
    <referenceTo>mfg_Warehouse__c</referenceTo>
    <relationshipLabel>Production Orders</relationshipLabel>
    <relationshipName>Production_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>