Manufactoring/force-app/main/default/objects/mfg_Production_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>mfg_Is_Customer_Driven__c</columns>
    <columns>mfg_Order_Product__c</columns>
    <columns>mfg_Product__c</columns>
    <columns>mfg_Quantity_Ordered__c</columns>
    <columns>mfg_Status__c</columns>
    <columns>mfg_Warehouse__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>